[package]
name = "dust_dds_shapes_demo"
version = "0.1.0"
authors = [
	"Joao Rebelo <jrebelo@s2e-systems.com>",
	"Stefan Kimmer <skimmer@s2e-systems.com>",
]
license = "Apache-2.0"
edition = "2021"
description = "Dust DDS Shapes Demo"
homepage = "https://s2e-systems.com/products/dust-dds"
repository = "https://github.com/s2e-systems/dust-dds"
keywords = ["dds", "rtps", "middleware", "network", "udp"]
categories = ["api-bindings", "network-programming"]

[dependencies]
dust_dds = { version = "0.4", git = "https://github.com/s2e-systems/dust-dds.git", branch = "master"  }
eframe = "0.21.0"
image = { version = "0.24", features = ["png"] }
periodic = "0.1.1"

[build-dependencies]
dust_dds_gen = {version = "0.4", git = "https://github.com/s2e-systems/dust-dds.git", branch = "master"  }
