[package]
name = "dust_dds_shapes_demo"
version = "0.1.0"
authors = [
	"Joao Rebelo <jrebelo@s2e-systems.com>",
	"Stefan Kimmer <skimmer@s2e-systems.com>",
]
license = "Apache-2.0"
edition = "2021"
description = "Dust DDS Shapes Demo"
homepage = "https://s2e-systems.com/products/dust-dds"
repository = "https://github.com/s2e-systems/dust-dds"
keywords = ["dds", "rtps", "middleware", "network", "udp"]
categories = ["api-bindings", "network-programming"]

[lib]
path = "src/android.rs"
crate_type = ["cdylib"]
name="android"

[[bin]]
path="src/desktop.rs"
name="dust-dds-shapes-demo"

[dependencies]
dust_dds = { version = "0.8" }
eframe = "0.26"
image = { version = "0.24", features = ["png"] }

[target.'cfg(target_os = "android")'.dependencies]
log = "0.4"
winit = { version = "0.29", features = [ "android-native-activity" ] }
android_logger = "0.13.1"

[build-dependencies]
dust_dds_gen = { version = "0.7" }
