[package]
name = "dust_dds_shapes_demo"
version = "0.1.0"
authors = [
	"Joao Rebelo <jrebelo@s2e-systems.com>",
	"Stefan Kimmer <skimmer@s2e-systems.com>",
]
license = "Apache-2.0"
edition = "2021"
description = "Dust DDS Shapes Demo"

[lib]
path = "src/lib.rs"

[dependencies]
dust_dds = { version = "0.8.2", path = "../dust-dds/dds" }
eframe = "0.26"
image = { version = "0.24", features = ["png"] }

[build-dependencies]
dust_dds_gen = { version = "0.7" }
